fixed bg colour element not displaying on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,18 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --custom-gradient: linear-gradient(
+    90deg,
+    #6467f2 0%,
+    #a855f7 50%,
+    #ec4699 100%
+  );
+  /* --custom-gradient: linear-gradient(
+    90deg,
+    rgba(99, 102, 241, 1) 0%,
+    rgba(168, 85, 247, 1) 50%,
+    rgba(236, 72, 153, 1) 100%
+  ); */
 }
 html,
 body {
@@ -20,20 +32,26 @@ body {
 
 @layer components {
   .container {
-    @apply flex flex-col pt-12 px-2 mx-auto w-full max-w-screen-xl;
+    @apply flex flex-col lg:pt-6 px-2 mx-auto w-full max-w-screen-xl;
   }
   .background {
     @apply min-w-full min-h-screen absolute bg-slate-200 -z-10 overflow-x-hidden;
   }
   .background-color-blueish {
-    @apply absolute top-20 left-[28vw]  w-96 lg:w-[40rem] h-96 lg:h-[40rem] bg-gradient-to-r from-blue-700 to-violet-500 rounded-full mix-blend-multiply filter blur-[96px] opacity-70;
+    @apply absolute top-20 left-[28vw] w-96 lg:w-[40rem] h-96 lg:h-[40rem] rounded-full bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 mix-blend-multiply filter blur-[96px] opacity-70;
+    /* Safari won't display anything with blur filter otherwise */
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
   }
-  /* .background-color-blueish2 {
-    @apply absolute top-80 left-[38vw]  w-96 lg:w-[40rem] h-96 lg:h-[40rem] bg-gradient-to-r from-blue-700 to-violet-500 rounded-full mix-blend-darken filter blur-3xl opacity-70;
-  } */
+
   .background-color-pinkish {
-    @apply absolute top-20 left-[28vw] w-96 lg:w-[40rem] h-96 lg:h-[40rem] bg-gradient-to-r from-pink-400 to-rose-300 rounded-full mix-blend-multiply filter blur-[96px] opacity-70;
+    @apply absolute top-20 left-[28vw] w-96 lg:w-[40rem] h-96 lg:h-[40rem] rounded-full mix-blend-multiply filter blur-[96px]  opacity-70;
+    background-image: var(--custom-gradient);
+    /* Safari won't display anything with blur filter otherwise */
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
   }
+
   .btn-primary {
     @apply rounded-md min-w-fit w-full h-[48px] px-4 font-medium text-lg text-white bg-purple-600;
   }
